[tool.poetry]
name = "mqtt_pub_sub"
version = "0.1.0"
description = ""
authors = ["Lucas Pereira Reis <pro.lucasreis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.6.1"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
