[tool.poetry]
name = "opencv_yolo_detection"
version = "0.1.0"
description = ""
authors = ["Lucas Pereira Reis <pro.lucasreis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
jupyter = "^1.0.0"
ipykernel = "^6.13.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
